samples/_failures_safe/1761285159_5d0ab6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_826812be.c: In function ‘main’:
./samples/SAFE/__tmp_826812be.c:188:25: error: expected ‘)’ at end of input
  188 |     if (person_count > 0
      |        ~                ^
      |                         )
./samples/SAFE/__tmp_826812be.c:188:5: error: expected declaration or statement at end of input
  188 |     if (person_count > 0
      |     ^~
